More help changes

--- a/DScaler/Help/Calibration.htm
+++ b/DScaler/Help/Calibration.htm
@@ -237,7 +237,7 @@ height="2"></td>
       </table>
       <p>You can find this test pattern on several Pal THX DVD. For instance, 
         &quot;Les Rivi&egrave;res Pourpres&quot; in region 2.</p>
-      <p>For more informations about the THX test patterns, you can see <a href="http://www.thx.com/consumer_products/optimizer/index.html">here</a>.</p>
+      <p>For more informations about the THX test patterns, you can see <a target="_blank" href="http://www.thx.com/consumer_products/optimizer/index.html">here</a>.</p>
       <p><font face="Arial" size="2"><b>THX Optimode (Ntsc)</b></font></p>
       <table width="100%" border="1">
         <tr> 
@@ -255,7 +255,7 @@ height="2"></td>
       </table>
       <p>You can find those test patterns on several Ntsc THX DVD. For instance, 
         &quot;Toy Story Ultimate Toy Box&quot; in region 1.</p>
-      <p>For more informations about the THX test patterns, you can see <a href="http://www.thx.com/consumer_products/optimizer/index.html">here</a>.</p>
+      <p>For more informations about the THX test patterns, you can see <a target="_blank" href="http://www.thx.com/consumer_products/optimizer/index.html">here</a>.</p>
       <p><font face="Arial" size="2"><b>DVD Video Essentials</b></font></p>
       <table width="100%" border="1">
         <tr> 
@@ -271,7 +271,7 @@ height="2"></td>
           </td>
         </tr>
       </table>
-      <p>For more informations about the AVIA disc, you can see <a href="http://www.videoessentials.com/dvd.htm">here</a>.</p>
+      <p>For more informations about the Video Essentials disc, you can see <a target="_blank" href="http://www.videoessentials.com/dvd.htm">here</a>.</p>
       <p><font size="2"><b><font face="Arial">DVD AVIA</font></b></font></p>
       <table width="100%" border="1">
         <tr> 
@@ -287,7 +287,7 @@ height="2"></td>
           </td>
         </tr>
       </table>
-      <p>For more informations about the AVIA disc, you can see <a href="http://www.ovationsw.com/">here</a>.</p>
+      <p>For more informations about the AVIA disc, you can see <a target="_blank" href="http://www.ovationsw.com/">here</a>.</p>
       <!-- #EndEditable --> </td>
 </tr>
 
