--- a/DScaler/Help/Developer.HTM
+++ b/DScaler/Help/Developer.HTM
@@ -54,23 +54,23 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<p><b>Additional developers are needed for DScaler!</b> In only a
-short time, this project has garnered a <b>large, loyal, active,
+<p><b>Additional developers are always needed for DScaler!</b></p>
+<p> In only a short time, this project has garnered a <b>large, loyal, active,
 and knowledgable user-base</b> of videophiles. This project is
 making waves in the home theater industry! The project is
 currently in need of developers with a broad range of skills
 (C++, assembly, user interface, video internals, etc.). Your
 skills will be utilized immediately, as we seek to keep this
-extraordinary momentum going. Please see the <a href=
-"Developer_docs.htm">Developer Documentation</a> to get started
-on DScaler development and then introduce yourself to the <a
-href=
-"http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">
-mailing list</a>.</p>
+extraordinary momentum going.</p>
 
-<p>Please refer to the <a href=
+<p>To get started on DScaler development browse through the source and check out 
+some of the documents linked below and then introduce yourself to the <a target="_blank" 
+href="http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">
+developers mailing list</a>.</p>
+
+<p>Please refer to the <a target="_blank" href=
 "http://sourceforge.net/tracker/?group_id=7420&atid=107420">bugs</a>
-and <a href=
+and <a target="_blank" href=
 "http://sourceforge.net/pm/task.php?group_project_id=7174&group_id=7420&func=browse">
 Todo</a> pages for the current task list (Note, these may be
 outdated. It's recommended to join the mailing list to keep
@@ -79,15 +79,14 @@ of one of these tasks, everyone on the mailing list would love to
 hear from you.</p>
 
 <p>DScaler is released under the GNU Public License. Browse the
-<a href=
+<a target="_blank" href=
 "http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">
-CVS repository</a> and take a look at the code, then <a href=
+CVS repository</a> and take a look at the code, then <a target="_blank" href=
 "http://www.dscaler.org/downloads.htm">download</a> the latest release source zipped. In
 addition to the latest release source, you may be interested in
 reviewing the latest beta source, updated from CVS four times
-daily (<a href="http://www.dscaler.org/downloads/dscalermodule.zip">application</a>, <a
-href="http://www.dscaler.org/downloads/directshowmodule.zip">test deinterlace
-DirectShow module</a>).</p>
+daily (<a target="_blank" href="http://www.dscaler.org/downloads/dscalermodule.zip">application</a>, 
+<a target="_blank" href="http://www.dscaler.org/downloads/directshowmodule.zip">test deinterlace DirectShow module</a>).</p>
 
 <p>The source compiles under MS Visual C++ 6.0. The application
 has grown out of the GPL code base of MultiDec and MoreTV, two
@@ -95,7 +94,7 @@ cable descrambling programs.  By combining the GPL parts of both
 and extending them both, we were able to create a new legal
 totally open source project.</p>
 
-<p>The individual source files are in the <a href=
+<p>The individual source files are in the <a target="_blank" href=
 "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">CVS
 Repository</a>.  To get check-out and check-in access, you will
 need to get cvs and to make a few configuration changes see the
@@ -106,20 +105,20 @@ the project and for CVS check-out and check-in permission.</p>
 
 <h2>Sourceforge Project Developer Links</h2>
 
-<p><a href="http://sourceforge.net/project/?group_id=7420">Main
+<p><a target="_blank" href="http://sourceforge.net/project/?group_id=7420">Main
 Project page</a></p>
 
-<p><a href="http://sourceforge.net/mail/?group_id=7420">Mailing
+<p><a target="_blank" href="http://sourceforge.net/mail/?group_id=7420">Mailing
 List</a></p>
 
-<p><a href=
+<p><a target="_blank" href=
 "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse
 CVS Repository</a></p>
 
-<p><a href="http://www.dscaler.org/downloads/dscalermodule.zip">Application Source
+<p><a target="_blank" href="http://www.dscaler.org/downloads/dscalermodule.zip">Application Source
 Zip</a></p>
 
-<p><a href="http://www.dscaler.org/downloads/directshowmodule.zip">Test Deinterlace
+<p><a target="_blank" href="http://www.dscaler.org/downloads/directshowmodule.zip">Test Deinterlace
 DirectShow Module Source Zip</a></p>
 
 <h2>Deinterlace Project Developer Resources</h2>
@@ -127,7 +126,7 @@ DirectShow Module Source Zip</a></p>
 <p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown
 Algorithm</a>.</p>
 
-<p>John Adcock's <a href="http://www.dscaler.org/palmovie/index.htm">PALMovie
+<p>John Adcock's <a target="_blank" href="http://www.dscaler.org/palmovie/index.htm">PALMovie
 deinterlace plugin</a> for bTV.</p>
 
 <p>A <a href=
@@ -141,20 +140,27 @@ available</a> in the DScaler.ini file.</p>
 <p>Conexant's <a href=http://www.dscaler.org/distributions/btregtools.zip">Bt 8x8
 register tools</a> for Windows 9x.</p>
 
-<h2><br>
- BT848 Links</h2>
+<h2>BT848 Links</h2>
 
-<p><a href=
+<p><a target="_blank" href=
 "http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">
 BT878a page at Conexant</a></p>
 
-<p><a href="http://me.in-berlin.de/~kraxel/bttv.html">bttv -
-Linux Driver - Without this none of this would have been
-possible</a></p>
+<p><a target="_blank" href="http://me.in-berlin.de/~kraxel/bttv.html">bttv -
+Linux Driver</a> - Without this none of this would have been
+possible</p>
 
-<p><a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD
-B</a><a href="http://vulture.dmem.strath.ac.uk/bt848/">t848
-Driver Project</a></p>
+<p><a target="_blank" href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD
+bt848</a> Driver Project</p>
+
+<h2>Sound Links</h2>
+
+<p>This <a target="_blank" href="ftp://telepresence.dmem.strath.ac.uk/pub/bt848/spec/">FTP 
+site</a> contains documents on the MSP sound chips and Phillips and Temic 
+tuners that would be useful for anyone looking to improve these areas. 
+I only recently found this site and have had a quick look and found that 
+most of the information you need should be buried in this lot.</p>
+
 
 <!-- #EndEditable -->
 </td>
