--- a/DScaler/Help/FAQ.htm
+++ b/DScaler/Help/FAQ.htm
@@ -66,7 +66,7 @@ height="2"></td>
 
 <h2>Where can I find the latest FAQ ?</h2>
 
-<p><a href="http://www.dscaler.org/FAQ.htm">Here at
+<p><a target="_blank" href="http://www.dscaler.org/FAQ.htm">Here at
 http://www.dscaler.org/FAQ.htm</a></p>
 
 <h2>What is DScaler ?</h2>
@@ -187,7 +187,7 @@ site and keep track of who is using our software.</p>
 
 <h2>Where can I download DScaler?</h2>
 
-<p>Official releases are placed on DScaler's site, on the <a
+<p>Official releases are placed on DScaler's site, on the <a target="_blank" 
 href="http://www.dscaler.org/downloads.htm">download page</a></p>
 
 <p>From time to time the developers release alpha test versions,
@@ -358,7 +358,7 @@ rather than from their desk ;-)</p>
 shortcuts</a> for all main options so that you can do everything
 quickly.</p>
 
-<p>We also suggest the use of <a href="http://www.girder.nl">Girder</a> 
+<p>We also suggest the use of <a target="_blank" href="http://www.girder.nl">Girder</a> 
 from Ron Bessems as the application of choice for remote controlling your computer.</p>
 
 <h2>Can I record video to my hard disk with DScaler?</h2>
@@ -379,15 +379,15 @@ it the best video processor it can be.</p>
 choose from, such as:</p>
 
 <ul>
-<li><a href="http://www.virtualdub.org/">VirtualDub</a>, an
+<li><a target="_blank" href="http://www.virtualdub.org/">VirtualDub</a>, an
 open-source desktop video application, can capture as well as
 edit and post-process video.</li>
 
-<li><a href="http://www.showshifter.com/">ShowShifter</a> for
+<li><a target="_blank" href="http://www.showshifter.com/">ShowShifter</a> for
 TiVo-like features such as an integrated program guide and
 pausing of live TV.</li>
 
-<li><a href="http://www.nct.ch/multimedia/avi_io">AVI_IO</a> is a
+<li><a target="_blank" href="http://www.nct.ch/multimedia/avi_io">AVI_IO</a> is a
 video recording application that specializes in keeping audio
 locked to video even in the face of dropped frames.</li>
 </ul>
@@ -651,7 +651,7 @@ something that is already in the <a href=
 Tasks list</a>, join the <a href=
 "http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">
 mailing list</a>. Some information to get you started is
-on the <a href="http://www.dscaler.org/developers.htm">developers
+on the <a target="_blank" href="http://www.dscaler.org/developers.htm">developers
 page</a>. 
 <!-- #EndEditable -->
 </p>
