--- a/DScaler/Help/GreedyH.HTM
+++ b/DScaler/Help/GreedyH.HTM
@@ -77,9 +77,9 @@ the stationary ones alone. If a diagonal edge is not moving then
 it won't be jagged anyway under Greedy (High Motion). I've
 previously somewhere here posted a couple snaps of some hard to
 handle Video Essentials scenes off my test machine and a $135
-non-progressive DVD player. See <a href=
+non-progressive DVD player. See <a target="_blank" href=
 "http://www.trbarry.com/Flag.tif" target="_blank">the Flag</a>
-and <a href="http://www.trbarry.com/Lights.tif" target=
+and <a target="_blank" href="http://www.trbarry.com/Lights.tif" target=
 "_blank">the Lampposts</a> .</p>
 
 <p>- Slider adjustments for Max Comb, Motion Threshold, and
