--- a/DScaler/Help/Install.htm
+++ b/DScaler/Help/Install.htm
@@ -55,7 +55,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <td colspan="3"><!-- #BeginEditable "Text" -->
 <h2>Hardware Prerequisites</h2>
 
-<p>See the <a href="http://www.dscaler.org/card-support/index.htm">supported cards
+<p>See the <a target="_blank" href="http://www.dscaler.org/card-support/index.htm">supported cards
 page</a> to find out if your video capture card is supported.
 Please note that currently, your performance may degrade
 significantly if your CPU is slower than 400 MHz or your video
