--- a/DScaler/Help/Teletext.htm
+++ b/DScaler/Help/Teletext.htm
@@ -56,9 +56,11 @@ height="2"></td>
   <tr> 
     <td colspan="3"> 
 <!-- #BeginEditable "Text" -->
-<p>DScaler has a basic Teletext feature.</p>
+<p>DScaler has a some support for Teletext.</p>
 <p>Teletext is a data service provided in the vertical blanking region and
 is found on TV signals broadcast in 50Hz countries.</p>
+<p>Teletext support is still a work in progress and the developers are aware that
+there are many problems with the current code.</p>
 <p>Use the T key to toggle between Normal, Teletext and Mix modes.</p>
 <p>To select a page type in the page number while in either Teletext or Mix mode.</p>
 <p>DScaler currently supports a few different code pages for different languages.
