--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -93,6 +93,9 @@ method.</li>
 Purdila, Vladimir Dergachev and Christian Lupien&#151;the GATOS
 developers&#151;for the original screen capture code.</li>
 
+<li>Jim Ferguson for his ground breaking YXY tool, the model and benchmark 
+for aspect ratio support.</li>
+
 <li>Erik Spr&aring;ng for the new DScaler logo.</li>
 
 <li>Phat Phreddy for the new DScaler domains.</li>
