--- a/DScaler/Help/user_support.htm
+++ b/DScaler/Help/user_support.htm
@@ -53,43 +53,56 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<p>Currently, most for support DScaler is provided through the <a
-href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS Home
+<p>Currently, most support DScaler is provided through the <a target="_blank" 
+href="http://www.avsforum.com/avs-vb/forumdisplay.php?s=&forumid=26">AVS Home
 Theater PC Forum</a>, the largest such forum on the internet and
-a great place to pick up information and advice. Please feel free
-to stop by and say hello. You can post questions, bug reports,
-and suggestions there. We suggest that you do a <a href=
-"http://www.avsforum.com/ubbcgi/search.cgi?action=intro">search</a>
-of the forum to ensure that your question has not already been
-answered. Bugs can also be posted <a href=
-"http://sourceforge.net/bugs/?group_id=7420">at SourceForge</a>,
+a great place to pick up information and advice.</p>
+
+<p>Because of the way DScaler is developed some parts of it are much more stable
+than others and indeed some parts of the code are considered experimental.  The 
+parts of the code currently considered experiemental are:</p>
+<ul>
+<li>Time-shifting</li>
+<li>Teletext</li>
+<li>Closed Capions</li>
+</ul><p>Please do not report bugs in these areas to the forum.</p>
+
+<p>Additionally there is the ongoing problem of sound support, please read
+<a href="SoundIssues.htm">this explaination of Sound Issues</a> before posting 
+issues relating to sound in the <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&postid=654909&t=7777#post654909">
+Sound Issues Thread</a></p>
+
+<p>We also suggest that you do a <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/search.php?s=">search</a>
+of the "Home Theater Computer" forum to ensure that your question has not already been
+answered. Bugs can also be posted in the <a target="_blank" href=
+"http://sourceforge.net/bugs/?group_id=7420">DScaler bugs page</a> at 
+<a target="_blank" href="http://sourceforge.net/">SourceForge</a>,
 this list should reflect the current known bugs.  Please try to
 give as much information as possible when describing your
 problem.</p>
 
-<p>Support at <a href=
-"http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS</a> is given by
+<p>Support at <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/index.php?s=">AVS</a> is given by
 the helpful members of the community, whether they be involved in
 this project or not. However, some people that may appear often
 to answer user questions and who are affiliated with project
 include:</p>
 
 <p><u>User support<br>
-</u> Dan Schmelzer (dschmelzer), developer and user support;<br>
- Yvon Quere (Yvonus), the FAQ maintainer;<br>
- Jason Castle (jcastle), the todo and bugs pages maintainer;
-and<br>
- (Slithy Tove), the .ini file page maintainer.</p>
+</u>Dan Schmelzer (dschmelzer) <br>
+ Yvon Quere (Yvonus)<br>
+ Jason Castle (jcastle)<br>
+ (Slithy Tove)</p>
 
 <p><u>DScaler Developers</u><br>
- John Adcock (JohnAd), the founder and administrator of the
-project;<br>
- Mark Rejhon, developer;<br>
- Steve Grimm (StevenGrimm), developer;<br>
- Tom Barry (trbarry), developer;<br>
- Mark Fiechtner, developer;<br>
- Peter Gubanov (pgubanov), developer; and<br>
- Michael Eskin (eskin), Conexant representative developer.</p>
+ John Adcock (JohnAd)<br>
+ Mark Rejhon<br>
+ Steve Grimm (StevenGrimm)<br>
+ Tom Barry (trbarry)<br>
+ Peter Gubanov (pgubanov)<br>
+ Michael Eskin (eskin)</p>
 
 <!-- #EndEditable -->
 </td>
