Moved to new reviews page throughout Reformat of CVS Instructions

--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -258,7 +258,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr> 
     <td colspan="3" height="40"> 
       <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
         | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
         | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
         <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
