--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -435,7 +435,7 @@ href="http://www.dscaler.org/downloads.htm">download page</a></p>
 <td colspan="3">
 <div align="center"><a href="index.php" class=
 "bottommenu">home</a> | <a href="about.htm" class=
-"bottommenu">about</a> | <a href="Reviews.htm" class=
+"bottommenu">about</a> | <a href="/reviews/index.htm" class=
 "bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
 "bottommenu">screenshots</a> | <a href="downloads.htm" class=
 "bottommenu">download</a> | <a href="Authors.htm" class=
