--- a/htdocs/Todo.htm
+++ b/htdocs/Todo.htm
@@ -116,7 +116,7 @@ feedback at the AVScience Forum and our developer mailing list!</p>
   <tr> 
     <td colspan="3"> 
       <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
         | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
         | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
         <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
