--- a/htdocs/readme/dTV_Readme105.htm
+++ b/htdocs/readme/dTV_Readme105.htm
@@ -104,7 +104,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr> 
     <td colspan="3"> 
       <div align="center"><a href="../index.php" class="bottommenu">home</a> | <a href="../about.htm" class="bottommenu">about</a> 
-        | <a href="../Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="../screenshots/index.htm" class="bottommenu">screenshots</a> 
+        | <a href="../reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="../screenshots/index.htm" class="bottommenu">screenshots</a> 
         | <a href="../downloads.htm" class="bottommenu">download</a> 
         | <a href="../Authors.htm" class="bottommenu">authors</a> 
         | <a href="../Thanks.htm" class="bottommenu">thanks</a> <br>
