Updated site with correct links and updated text

--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler - Links</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,96 +22,153 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Links&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <h3>Related Projects</h3>
-      <blockquote> 
-        <p><a href="palmovie/index.htm">PALMovie deinterlace plugin for bTV</a><br>
-          <a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD Bt848 Driver 
-          Project</a><br>
-          <a href="http://me.in-berlin.de/%7Ekraxel/bttv.html">bttv - Linux Driver</a><br>
-          <a href="http://www.geocities.com/virtualdub/">VirtualDub</a><br>
-          <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's VirtualDub 
-          Plug-ins</a><br>
-          <a href="http://www.linuxvideo.org/gatos/">GATOS</a></p>
-      </blockquote>
-      <h3><br>
-        Discussion</h3>
-      <blockquote> 
-        <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/007370.html">dTV
-        2.1.2 
-          Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005917.html">dTV 2.0.2 
-          Release Thread</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
-          Release Thread</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/005129.html">ANNOUNCEMENT: 
-          dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004448.html">NEW VERSION: 
-          dTV 1.8 released</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004360.html">dTV 1.7 
-          Experimental Beta </a>(AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004188.html">dTV 1.6 
-          Experimental Beta</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004067.html">dTV 1.5 
-          - Auto Pulldown detect & better video deinterlacing</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/004004.html">dTV Version 
-          1.4</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/003921.html">dTV New 
-          Release Version 1.3</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html">New version 
-          of dTV - now with video souce deinterlacing</a> (AVS Forum)<br>
-          <a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">First 
-          Version of NTSC/PAL TV deinterlacing program</a> (AVS Forum)<br>
-        </p>
-      </blockquote>
-      <!-- #EndEditable --></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
-        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
-        | <a href="Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->Links 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<h3>Related Projects</h3>
+
+<blockquote>
+<p><a href="palmovie/index.htm">PALMovie deinterlace plugin for
+bTV</a><br>
+ <a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD Bt848
+Driver Project</a><br>
+ <a href="http://me.in-berlin.de/%7Ekraxel/bttv.html">bttv -
+Linux Driver</a><br>
+ <a href=
+"http://www.virtualdub.org/index">VirtualDub</a><br>
+ <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's
+VirtualDub Plug-ins</a><br>
+ <a href="http://www.linuxvideo.org/gatos/">GATOS</a></p>
+</blockquote>
+
+<h3><br>
+ Discussion</h3>
+
+<blockquote>
+<p><a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=32723">
+DScaler 2.3.0 Release Thread</a> (AVS Forum)<br>
+ 
+<a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78268">
+dTV 2.1.2 Release Thread</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76603">dTV 2.0.2
+Release Thread</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76526">dTV 2.0.1
+Release Thread</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75972">dTV 2.0.0
+Release Thread</a> (AVS Forum)<br>
+
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75799">ANNOUNCEMENT:
+dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75276">NEW
+VERSION: dTV 1.8 released</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75045">dTV 1.7
+Experimental Beta</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74931">dTV 1.6
+Experimental Beta</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74773">dTV 1.5 -
+Auto Pulldown detect & better video deinterlacing</a> (AVS
+Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74732">dTV
+Version 1.4</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74664">dTV New
+Release Version 1.3</a> (AVS Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74586">New
+version of dTV - now with video souce deinterlacing</a> (AVS
+Forum)<br>
+ <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78328">First
+Version of NTSC/PAL TV deinterlacing program</a> (AVS Forum)<br>
+</p>
+</blockquote>
+
+<!-- #EndEditable --></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<div align="center"><a class="bottommenu" href=
+"index.php">home</a> | <a href="about.htm" class=
+"bottommenu">about</a> | <a href="/reviews/index.htm" class=
+"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
+"bottommenu">screenshots</a> | <a href="downloads.htm" class=
+"bottommenu">download</a> | <a href="Authors.htm" class=
+"bottommenu">authors</a> | <a href="Thanks.htm" class=
+"bottommenu">thanks</a><br>
+ <a href="setup/index.htm" class="bottommenu">setup</a> | <a
+href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
+<a href="http://sourceforge.net/mail/?group_id=7420" class=
+"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
+"bottommenu">faq</a> | <a href="developers.htm" class=
+"bottommenu">developers</a> | <a href="Links.htm" class=
+"bottommenu">links</a></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
+
+<p><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" align="right">
+</a></p>
+
+<p> </p>
+
+<!-- #EndTemplate -->
 </body>
-<!-- #EndTemplate --></html>
+</html>
+
