--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler - Authors</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,124 +22,199 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->DScaler 
-      Authors&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
-<!-- #BeginEditable "Text" --> 
-      <h2>John Adcock</h2>
-      <blockquote> 
-        <p>John is the founder and maintainer of the project. He did huge amounts of full time 
-          development on versions 
-          1.0 through 1.6 Beta 4. He did most of the work cleaning, translating 
-          and legalizing Multidec. He put into code, the world's first open-source 
-          real-time 3:2 pulldown software deinterlacer (based on Mark Rejhon's 
-          algorithm article). He also designed an open-source video-material deinterlacer 
-          that is superior to those in virtually any other any PC-based video 
-          software product.</p>
-      </blockquote>
-      <h2>Mark Rejhon</h2>
-      <blockquote> 
-        <p> 
-          Mark authored the 3:2 pulldown algorithm that forms the basis of the 
-          algorithm implemented into DScaler by John Adcock. He also does other programming 
-          tasks like code cleanup, merging, documenting, testing, enhancing of 
-          contributors' changes that are submitted to the project. He also enhances
-          DScaler with his own changes to certain parts of the code, including improvements 
-          to the deinterlacer modes.</p>
-      </blockquote>
-      <h2>Steve Grimm</h2>
-      <blockquote> 
-        <p>Steve is contributing enhancements to the deinterlacing modes including 
-          better automatic switching between video mode and 3:2 pulldown mode, 
-          and handling of material that has bad 3:2 pulldown. In particular, Steve 
-          made significant modifications to the deinterlacing algorithm in version 
-          2.0.0. He also worked on an early version of a 3:2 pulldown deinterlacing 
-          algorithm. In addition, he is the author of the aspect ratio autodetection 
-          code which was included in version 1.9.</p>
-      </blockquote>
-      <h2>Tom Barry</h2>
-      <blockquote>Tom contributed the triple buffering code and synchronization 
-        fixes for version 2.0.0. Also, he has authored several MMX assembly optimizations 
-        to the video deinterlace mode and added the advanced Brooktree/Conexant 
-        chipset settings menu, both of which were included in version 1.9.</blockquote>
-      <h2>Michael Samblanet</h2>
-      <blockquote> 
-        <p>Michael is continuing to upgrade his aspect ratio control code.<br>
-        </p>
-      </blockquote>
-      <h2>Michael Eskin </h2>
-      <blockquote> 
-        <p>An engineer working at Conexant Systems Inc., the makers of the 8x8 
-          series chips that DScaler runs on.&nbsp; He basically meditates peace 
-          between the DScaler software and the 8x8 video capture hardware.&nbsp; 
-          When any of us fails on a nasty 8x8 issue, he takes over and gets the 
-          job done from time to time.&nbsp; One of his several valuable contributions 
-          include a bug fix to make Macrovision-encoded sources watchable in DScaler, 
-          without purple-lines interference.</p>
-      </blockquote>
-      <h2>Laurent Garnier</h2>
-      <blockquote>
-        <p>Despite having really no link with the french DJ, he's the latest one 
-          on the DScaler boat. French however, he coded the autodetection of WSS 
-          (WideScreen Signalling), improved a lot the OSD with various &quot;status 
-          screens&quot;. He also did the popup menu, per-format settings persistency. 
-          He's the second European coder, along with John Adcock.</p>
-      </blockquote>
-      <h2>Torbjörn Jansson</h2>
-      <blockquote>
-        <p>Added the new generic settings dialog and has provided many bug fixes</p>
-      </blockquote>
-      <p>&nbsp;</p>
-      <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
-        list of the many others who have contributed time and effort.</p>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->DScaler Authors 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<h2>John Adcock</h2>
+
+<blockquote>
+<p>John is the founder and maintainer of the project.  He did almost all of the work 
+cleaning, translating and legalizing Multidec to create the first versions of dTV. 
+He coded the world's first real-time software 3:2 pulldown software deinterlacer
+(based on Mark Rejhon's algorithm article). He has also designed several 
+video-material deinterlacers that are superior to those in
+virtually any other any PC-based video software product.</p>
+</blockquote>
+
+<h2>Mark Rejhon</h2>
+
+<blockquote>
+<p>Mark authored the 3:2 pulldown algorithm that forms the basis
+of the algorithm implemented into DScaler by John Adcock. He maintained the project
+for three months and during that time made a huge contribution to the project.
+Although Mark is less active on the project now he still pops up regularly to offer 
+sage advice and to share his enormous knowledge and passion for the perfect image. 
+</p>
+</blockquote>
+
+<h2>Steve Grimm</h2>
+
+<blockquote>
+<p>Steve contributed major enhancements to the film detection code
+including better automatic switching between video mode and 3:2
+pulldown mode, and handling of material that has bad 3:2
+pulldown. Steve also made significant modifications to
+the deinterlacing algorithms in version 2.0.0 creating the two frame algorithm.
+He also worked on an early version of a 3:2 pulldown deinterlacing algorithm. In
+addition, he is the author of the aspect ratio auto detection code
+which was included in version 1.9.</p>
+</blockquote>
+
+<h2>Tom Barry</h2>
+
+<blockquote><p>As part of Tom's ongoing mission to use up all the world's CPU
+power he is behind many of the video deinterlacing plug-ins.  Tom has been part 
+of the project almost since the beginning and has contributed too much to summarize
+quickly.</p></blockquote>
+
+<h2>Michael Samblanet</h2>
+
+<blockquote>
+<p>Michael is continuing to upgrade his aspect ratio control
+code.
+</p>
+</blockquote>
+
+<h2>Michael Eskin</h2>
+
+<blockquote>
+<p>An engineer working at Conexant Systems Inc., the makers of
+the 8x8 series chips that DScaler runs on.  He basically
+meditates peace between the DScaler software and the 8x8 video
+capture hardware.  When any of us fails on a nasty 8x8 issue, he
+takes over and gets the job done from time to time.  One of his
+several valuable contributions include a bug fix to make
+Macrovision-encoded sources watchable in DScaler, without
+purple-lines interference.</p>
+</blockquote>
+
+<h2>Laurent Garnier</h2>
+
+<blockquote>
+<p>In his time off from being confused with the similarly named French DJ, 
+Laurent has been very busy adding some of the coolest new features in recent releases:
+auto-calibration, the OSD (On Screen Display), WSS (WideScreen Signalling) and per-format
+settings.</p>
+</blockquote>
+
+<h2>Torbj&ouml;rn Jansson</h2>
+
+<blockquote>
+<p>Added the new generic settings dialog and has provided many
+bug fixes</p>
+</blockquote>
+
+<h2>Eric Schmidt</h2>
+
+<blockquote>
+<p>Eric's major contribution has been the timeshifting code.</p>
+</blockquote>
+
+<h2>Lindsey Dubb</h2>
+
+<blockquote>
+<p>The brains behind the new Temporal Comb Filter and the old game plug-in.</p>
+</blockquote>
+
+<h2>Jochen Trenner</h2>
+
+<blockquote>
+<p>Provided improvements to the MSP code for European stereo systems as his 
+alter ego "Hermes Conrad".</p>
+</blockquote>
+
+<h2>Mike Temperton</h2>
+
+<blockquote>
+<p>Is responsible for the many improvements to Teletext.</p>
+</blockquote>
+
+<h2>Muljadi Budiman</h2>
+
+<blockquote>
+<p>Added support for overlay colour controls.</p>
+</blockquote>
+
+<p>Please see the <a href="Thanks.htm">Thanks</a> file for an
+incomplete list of the many others who have contributed time and
+effort.</p>
+
 <!-- #EndEditable -->
 </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
-        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
-        | <a href="Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<div align="center"><a class="bottommenu" href=
+"index.php">home</a> | <a href="about.htm" class=
+"bottommenu">about</a> | <a href="/reviews/index.htm" class=
+"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
+"bottommenu">screenshots</a> | <a href="downloads.htm" class=
+"bottommenu">download</a> | <a href="Authors.htm" class=
+"bottommenu">authors</a> | <a href="Thanks.htm" class=
+"bottommenu">thanks</a><br>
+ <a href="setup/index.htm" class="bottommenu">setup</a> | <a
+href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
+<a href="http://sourceforge.net/mail/?group_id=7420" class=
+"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
+"bottommenu">faq</a> | <a href="developers.htm" class=
+"bottommenu">developers</a> | <a href="Links.htm" class=
+"bottommenu">links</a></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
+
+<p><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" align="right">
+</a></p>
+
+<p> </p>
+
+<!-- #EndTemplate -->
 </body>
-<!-- #EndTemplate --></html>
+</html>
+
