--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler - Thanks</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,95 +22,141 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Thanks&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
-<!-- #BeginEditable "Text" --> 
-      <p> See <a href="Authors.htm">Authors</a> for up to date list of developers 
-        who have contributed code to the project.</p>
-      <p>See <a href="Thanks_MultiDec.txt">Thanks_MultiDec.txt</a> for a list 
-        of thanks for the project DScaler was based upon.</p>
-      <ol>
-        <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 algorithm 
-          and his help testing, promoting DScaler but particularly for his vision 
-          and his refusal to accept second best.</li>
-        <li>Thanks to Michael Samblanet, who contributed the aspect ratio control 
-          code.</li>
-        <li>Thanks to Daniel Schmelzer for his hard work creating and updating 
-          the website.&nbsp;</li>
-        <li>Thanks to Steve Grimm for his work on the new and old methods of 3:2 
-          pulldown and to his contribution of the aspect ratio autodetect code.</li>
-        <li>Thanks to Tom Barry for his implementation of triple buffering and 
-          his synchronization fix, as well as his contribution of low-level user 
-          manipulation of the bt chipset.</li>
-        <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV, 
-          the inspiration for DScaler (previously dTV) </li>
-        <li>Yvon for creating and updating the english FAQ, maintaining the French 
-          translation, and coordinating the other translations (Ricardo Cruz for 
-          the Portuguese version)</li>
-        <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
-        <li>Thanks to Borg, creator of bTV, for writing the first ever intelligent 
-          computer deinterlacing program--the inspiration for this project.</li>
-        <li>Thanks to all at the AVSForums for your encouragement and help. The 
-          HTPC forum is easily the best group on the internet.</li>
-        <li>Thanks to the authors of VirtualDub for the the PAL detection algorithm.</li>
-        <li>Thanks to Gunnar Thalin for his area based deinterlacing plug-in which 
-          was the basis for the current deinterlacing method.</li>
-        <li>Thanks to Steaphan Greene, Øyvind Aabling, Octavian Purdila, Vladimir 
-          Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the 
-          screen capture code. </li>
-        <li>Thanks to Torbjörn Jansson for his bug fixes.</li>
-        <li>Thanks to Erik Språng for the new DScaler logo. </li>
-        <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
-        <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
-      </ol>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->Thanks 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+
+<p>The DScaler team would like to express their gratitude to:</p>
+<ul>
+<li>All the <a href="Authors.htm">authors</a> who have contributed 
+code to the project.</li>
+
+<li>Expresso for creating multidec the foundation of DScaler. 
+<a href="Thanks_MultiDec.txt">MultiDec's thanks.</a></li>
+
+<li>Mathias Ellinger for the driver from FreeTV on which DScaler's driver is based.</li>
+
+<li>Daniel Schmelzer for his hard work creating and
+updating the website. </li>
+
+<li>Yvon Quere for creating and updating the FAQ.</li>
+
+<li>Yvon and Ali for finding, using and promoting bTV and encouraging us to
+see HTPC's as video processors.</li>
+
+<li>Jason Castle for updating the todo and bugs pages.</li>
+
+<li>Borg, creator of bTV, for writing the first ever
+intelligent computer deinterlacing program--the inspiration for
+this project.</li>
+
+<li>All at the AVSForums for your encouragement and
+help. The HTPC forum is easily the best group on the
+internet.</li>
+
+<li>The authors of VirtualDub for the the idea behind
+the PAL detection algorithm.</li>
+
+<li>Gunnar Thalin for his area based deinterlacing
+plug-in which was the basis for the Video Bob deinterlacing
+method.</li>
+
+<li>Steaphan Greene, &Oslash;yvind Aabling, Octavian
+Purdila, Vladimir Dergachev and Christian Lupien&#151;the GATOS
+developers&#151;for the original screen capture code.</li>
+
+<li>Jim Ferguson for his ground breaking YXY tool, the model and benchmark 
+for aspect ratio support.</li>
+
+<li>Erik Spr&aring;ng for the new DScaler logo.</li>
+
+<li>Phat Phreddy for the new DScaler domains.</li>
+
+<li>Tom Fojta for the Czech teletext code page.</li>
+
+<li>John Isar for the Greek teletext code page.</li>
+
+<li>Eduardo José Tagle for the PAL-NC patch.</li>
+
+<li>Everybody on the deinterlace project mailing list.</li>
+</ul>
+
 <!-- #EndEditable -->
-	</td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
-        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
-        | <a href="Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<div align="center"><a class="bottommenu" href=
+"index.php">home</a> | <a href="about.htm" class=
+"bottommenu">about</a> | <a href="/reviews/index.htm" class=
+"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
+"bottommenu">screenshots</a> | <a href="downloads.htm" class=
+"bottommenu">download</a> | <a href="Authors.htm" class=
+"bottommenu">authors</a> | <a href="Thanks.htm" class=
+"bottommenu">thanks</a><br>
+ <a href="setup/index.htm" class="bottommenu">setup</a> | <a
+href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
+<a href="http://sourceforge.net/mail/?group_id=7420" class=
+"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
+"bottommenu">faq</a> | <a href="developers.htm" class=
+"bottommenu">developers</a> | <a href="Links.htm" class=
+"bottommenu">links</a></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
+
+<p><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" align="right">
+</a></p>
+
+<p> </p>
+
+<!-- #EndTemplate -->
 </body>
-<!-- #EndTemplate --></html>
+</html>
+
