--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler - Developers</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,148 +22,191 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Developers&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p><b>Additional developers are needed for DScaler!</b> In only a short time, 
-        this project has garnered a <b>large, loyal, active, and knowledgable 
-        user-base</b> of videophiles. This project is making waves in the home 
-        theater industry! The project is currently in need of developers with 
-        a broad range of skills (C++, assembly, user interface, video internals, 
-        etc.). Your skills will be utilized immediately, as we seek to keep this 
-        extraordinary momentum going. Please see the <a href="Developer_docs.htm">Developer 
-        Documentation</a> to get started on DScaler development and then introduce 
-        yourself to the <a href="http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">mailing 
-        list</a>.</p>
-      <p>Please refer to the <a href="http://sourceforge.net/tracker/?group_id=7420&atid=107420">bugs</a> and <a href="http://sourceforge.net/pm/task.php?group_project_id=7174&group_id=7420&func=browse">Todo</a> 
-        pages for the current task list (Note, these may be outdated. It's recommended to join the mailing 
-        list to keep yourself up to date!). If you think that you can take on 
-        a part of one of these tasks, everyone on the mailing list would love 
-        to hear from you.</p>
-      <p>DScaler is released under the GNU Public License. Browse the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
-        repository</a> and take a look at the code, then <a href="downloads.htm">download</a> 
-        the latest release source zipped. In addition to the latest release source, 
-        you may be interested in reviewing the latest beta source, updated from 
-        CVS four times daily (<a href="/downloads/dscalermodule.zip">application</a>, 
-        <a href="/downloads/directshowmodule.zip">test deinterlace DirectShow 
-        module</a>).</p>
-      <p>The source compiles under MS Visual C++ 6.0. The application has grown 
-        out of the GPL code base of MultiDec and MoreTV, two cable descrambling 
-        programs.&nbsp; By combining the GPL parts of both and extending them 
-        both, we were able to create a new legal totally open source project.</p>
-      <p>The individual source files are in the&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">CVS 
-        Repository</a>.&nbsp; To get check-out and check-in access, you will need 
-        to get cvs and to make a few configuration changes see the project <a href="CVS_Instructions.htm">CVS 
-        Instructions</a> for more details. Please e-mail your Sourceforge username 
-        to the <a href="mailto:dschmelzer@hotmail.com">webmaster</a> to be added 
-        to the project and for CVS check-out and check-in permission.</p>
-      <h2><br>
-        Sourceforge Project Developer Links</h2>
-      <p><a href="http://sourceforge.net/project/?group_id=7420">Main Project 
-        page</a></p>
-      <p><a href="http://sourceforge.net/mail/?group_id=7420">Mailing List</a></p>
-      <p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse 
-        CVS Repository</a> </p>
-      <p><a href="/downloads/dscalermodule.zip">Application Source Zip</a></p>
-      <p><a href="/downloads/directshowmodule.zip">Test Deinterlace DirectShow 
-        Module Source Zip</a></p>
-      <h2><br>
-        Deinterlace Project Developer Resources</h2>
-      <p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
-      </p>
-      <p>John Adcock's <a href="palmovie/index.htm">PALMovie deinterlace plugin</a> 
-        for bTV.</p>
-      <p>A <a href="http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter 
-        from Video Demystified</a> dealing with the PAL, NTSC, and SECAM standards 
-        as well as Teletext and Closed-Captioning.</p>
-      <p>An explanation of the <a href="IniFile.HTM">options available</a> in 
-        the DScaler.ini file.</p>
-      <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tools</a> 
-        for Windows 9x.</p>
-      <h2> <br>
-        BT848 Links</h2>
-      <p><a href="http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">BT878a 
-        page at Conexant</a></p>
-      <p><a href="http://me.in-berlin.de/~kraxel/bttv.html">bttv - Linux Driver 
-        - Without this none of this would have been possible</a></p>
-      <p><a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD B</a><a href="http://vulture.dmem.strath.ac.uk/bt848/">t848 
-        Driver Project</a></p>
-      <h2><br>
-        AVScience Threads</h2>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
 
-      <p>
-	<a href="http://www.avsforum.com/ubb/Forum12/HTML/010701.html">DScaler 2.3.0 
-        Release Thread</a> (AVS Forum)<br>
-	<a href="http://www.avsforum.com/ubb/Forum12/HTML/007370.html">dTV 2.1.2 
-        Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010420-12-005917.html">dTV 2.0.2 
-        Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-005313.html">dTV 2.0.0 
-        Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-005129.html">ANNOUNCEMENT: 
-        dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004448.html">NEW VERSION: 
-        dTV 1.8 released</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004360.html">dTV 1.7 
-        Experimental Beta </a>(AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004188.html">dTV 1.6 
-        Experimential Beta</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004067.html">dTV 1.5 
-        - Auto Pulldown detect & better video deinterlacing</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004004.html">dTV Version 
-        1.4</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-003921.html">dTV New 
-        Release Version 1.3</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-003825.html">New version 
-        of dTV - now with video souce deinterlacing</a><br>
-        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-000071.html">Marc Rejhon's 
-        Algorithm for 3-2 Pulldown Deinterlacing</a></p>
-      <!-- #EndEditable --></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
-        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
-        | <a href="Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->Developers 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<p><b>Additional developers are always needed for DScaler!</b></p>
+<p> In only a short time, this project has garnered a <b>large, loyal, active,
+and knowledgable user-base</b> of videophiles. This project is
+making waves in the home theater industry! The project is
+currently in need of developers with a broad range of skills
+(C++, assembly, user interface, video internals, etc.). Your
+skills will be utilized immediately, as we seek to keep this
+extraordinary momentum going.</p>
+
+<p>To get started on DScaler development browse through the source and check out 
+some of the documents linked below and then introduce yourself to the <a target="_blank" 
+href="http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">
+developers mailing list</a>.</p>
+
+<p>Please refer to the <a target="_blank" href=
+"http://sourceforge.net/tracker/?group_id=7420&atid=107420">bugs</a>
+and <a target="_blank" href=
+"http://sourceforge.net/pm/task.php?group_project_id=7174&group_id=7420&func=browse">
+Todo</a> pages for the current task list (Note, these may be
+outdated. It's recommended to join the mailing list to keep
+yourself up to date!). If you think that you can take on a part
+of one of these tasks, everyone on the mailing list would love to
+hear from you.</p>
+
+<p>DScaler is released under the GNU Public License. Browse the
+<a target="_blank" href=
+"http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">
+CVS repository</a> and take a look at the code, then <a target="_blank" href=
+"http://www.dscaler.org/downloads.htm">download</a> the latest release source zipped. In
+addition to the latest release source, you may be interested in
+reviewing the latest beta source, updated from CVS four times
+daily (<a target="_blank" href="http://www.dscaler.org/downloads/dscalermodule.zip">application</a>, 
+<a target="_blank" href="http://www.dscaler.org/downloads/directshowmodule.zip">test deinterlace DirectShow module</a>).</p>
+
+<p>The source compiles under MS Visual C++ 6.0. The application
+has grown out of the GPL code base of MultiDec and MoreTV, two
+cable descrambling programs.  By combining the GPL parts of both
+and extending them both, we were able to create a new legal
+totally open source project.</p>
+
+<p>The individual source files are in the <a target="_blank" href=
+"http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">CVS
+Repository</a>.  To get check-out and check-in access, you will
+need to get cvs and to make a few configuration changes see the
+project <a href="CVS_Instructions.htm">CVS Instructions</a> for
+more details. Please e-mail your Sourceforge username to the <a
+href="mailto:dschmelzer@hotmail.com">webmaster</a> to be added to
+the project and for CVS check-out and check-in permission.</p>
+
+<h2>Sourceforge Project Developer Links</h2>
+
+<p><a target="_blank" href="http://sourceforge.net/project/?group_id=7420">Main
+Project page</a></p>
+
+<p><a target="_blank" href="http://sourceforge.net/mail/?group_id=7420">Mailing
+List</a></p>
+
+<p><a target="_blank" href=
+"http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse
+CVS Repository</a></p>
+
+<p><a target="_blank" href="http://www.dscaler.org/downloads/dscalermodule.zip">Application Source
+Zip</a></p>
+
+<p><a target="_blank" href="http://www.dscaler.org/downloads/directshowmodule.zip">Test Deinterlace
+DirectShow Module Source Zip</a></p>
+
+<h2>Deinterlace Project Developer Resources</h2>
+
+<p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown
+Algorithm</a>.</p>
+
+<p>John Adcock's <a target="_blank" href="http://www.dscaler.org/palmovie/index.htm">PALMovie
+deinterlace plugin</a> for bTV.</p>
+
+<p>A <a href=
+"http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter from
+Video Demystified</a> dealing with the PAL, NTSC, and SECAM
+standards as well as Teletext and Closed-Captioning.</p>
+
+<p>An explanation of the <a href="IniFile.HTM">options
+available</a> in the DScaler.ini file.</p>
+
+<p>Conexant's <a href=http://www.dscaler.org/distributions/btregtools.zip">Bt 8x8
+register tools</a> for Windows 9x.</p>
+
+<h2>BT848 Links</h2>
+
+<p><a target="_blank" href=
+"http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">
+BT878a page at Conexant</a></p>
+
+<p><a target="_blank" href="http://me.in-berlin.de/~kraxel/bttv.html">bttv -
+Linux Driver</a> - Without this none of this would have been
+possible</p>
+
+<p><a target="_blank" href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD
+bt848</a> Driver Project</p>
+
+<h2>Sound Links</h2>
+
+<p>This <a target="_blank" href="ftp://telepresence.dmem.strath.ac.uk/pub/bt848/spec/">FTP 
+site</a> contains documents on the MSP sound chips and Phillips and Temic 
+tuners that would be useful for anyone looking to improve these areas. 
+I only recently found this site and have had a quick look and found that 
+most of the information you need should be buried in this lot.</p>
+
+<!-- #EndEditable --></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<div align="center"><a class="bottommenu" href=
+"index.php">home</a> | <a href="about.htm" class=
+"bottommenu">about</a> | <a href="/reviews/index.htm" class=
+"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
+"bottommenu">screenshots</a> | <a href="downloads.htm" class=
+"bottommenu">download</a> | <a href="Authors.htm" class=
+"bottommenu">authors</a> | <a href="Thanks.htm" class=
+"bottommenu">thanks</a><br>
+ <a href="setup/index.htm" class="bottommenu">setup</a> | <a
+href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
+<a href="http://sourceforge.net/mail/?group_id=7420" class=
+"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
+"bottommenu">faq</a> | <a href="developers.htm" class=
+"bottommenu">developers</a> | <a href="Links.htm" class=
+"bottommenu">links</a></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
+
+<p><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" align="right">
+</a></p>
+
+<p> </p>
+
+<!-- #EndTemplate -->
 </body>
-<!-- #EndTemplate --></html>
+</html>
+
