--- a/htdocs/readme/DScaler_Readme230.htm
+++ b/htdocs/readme/DScaler_Readme230.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler -- Readme Version 2.3</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,120 +22,168 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="../images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="../images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->READ ME&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <H1>DScaler - version 2.3.0</H1>
-      <P>What's new:<br>
-      &nbsp;&nbsp;&nbsp; Plug-in architecture<br>
-      &nbsp;&nbsp;&nbsp; Judder reduction<br>
-      &nbsp;&nbsp;&nbsp; New Greedy 2 Frame method (good for sports)<br>
-      &nbsp;&nbsp;&nbsp; Gamma filter<br>
-      &nbsp;&nbsp;&nbsp; Option to save settings per format/source<br>
-      &nbsp;&nbsp;&nbsp; <font SIZE="2">WSS decoding for Pal and Secam sources<br>
-      &nbsp;&nbsp;&nbsp; Use of aspect ratio WSS data<br>
-      &nbsp;&nbsp;&nbsp; 3 screens of Information using OSD (general screen,
-      statistics screen</font> <font SIZE="2">and WSS data decoding screen)<br>
-      </font>&nbsp;&nbsp;&nbsp; <font size="2">Autohide cursor feature<br>
-      &nbsp;&nbsp;&nbsp; Popup menu - right click in window<br>
-      &nbsp;&nbsp;&nbsp; New menu with direct access to all channels<br>
-      &nbsp;&nbsp;&nbsp; Command to go to the last viewed channel<br>
-      &nbsp;&nbsp;&nbsp; Single click replaced by double click to switch between
-      window mode</font> <font size="2">and fullscreen mode<br>
-      </font>&nbsp;&nbsp;&nbsp; <font size="2">Option to save last used video
-      format per video input<br>
-      &nbsp;&nbsp;&nbsp; Zoom feature - still experimental<br>
-      &nbsp;&nbsp;&nbsp; Adjustable window position<br>
-      &nbsp;&nbsp;&nbsp; Orbiting &amp; Bounce<br>
-      &nbsp;&nbsp;&nbsp; CC support - experimental - lots of known problems<br>
-      &nbsp;&nbsp;&nbsp; Teletext support - experimental - lots of known
-      problems<br>
-      </font>
-      </P>
-      <H2>License:</H2>
-      <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
-        General Public License</A> as published by the Free Software Foundation. 
-        A copy of this license is included with this software distribution in 
-        the file COPYING.html. If you do not have a copy, you may obtain a copy 
-        by writing to the Free Software Foundation, 675 Mass Ave, Cambridge, MA 
-        02139, USA.</P>
-      <P>This software is distributed in the hope that it will be useful, but 
-        WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
-        or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
-        for more details</P>
-      <H2>Requirements:</H2>
-      <P>- I think it will run on Win 95/98 and NT. I have tested it on 98, Windows 
-        2000.<br>
-      - You will need a processor faster than about Pentium II 400MHz to use all
-      the features<br>
-      - You will definitely need a PCI TV card with a BT848 BT849 BT878 BT879 
-        in it.<br>
-      - This software will not work with ATI All-in-Wonder or Matrox TV cards.</P>
-      <h1><font color="#FF0000">Warning</font></h1>
-      <P><font color="#FF0000">This program installs a temporary driver while 
-        it runs.&nbsp; This means that some of the code runs inside Ring0 along 
-        with the kernel.&nbsp; What this means is that if anything goes wrong 
-        this program can crash your whole system causing a BSOD in NT or a hanging 
-        95/98.&nbsp; If using a debugger then it it is very important 
-        that the program is allowed to shut down normally.&nbsp; If you use Stop 
-        Debugging while running the program you system WILL crash.</font></P>
-      <P><font color="#FF0000">As a precaution sync the disks before running this 
-        program.&nbsp; Use the sync utility from <a href="http://www.sysinternals.com/">http://www.sysinternals.com/</a> 
-        for whichever operating system you are running.</font></P>
-      <p><a href="../Authors.htm">Authors</a></p>
-      <p><a href="../Thanks.htm">Thanks</a></p>
-      <p><a href="../user_support.htm">Support</a></p>
-      <p><a href="../32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
-      <p><a href="../IniFile.HTM">Ini File Settings</a></p>
-      <p><a href="../keyboard.htm"> Keyboard Shortcuts</a></p>
-      <H2>Enjoy!</H2>
-      <!-- #EndEditable --></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="../../images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a href="../index.php" class="bottommenu">home</a> | <a href="../about.htm" class="bottommenu">about</a> 
-        | <a href="../reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="../screenshots/index.htm" class="bottommenu">screenshots</a> 
-        | <a href="../downloads.htm" class="bottommenu">download</a> 
-        | <a href="../Authors.htm" class="bottommenu">authors</a> 
-        | <a href="../Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="../setup/index.htm" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="../FAQ.htm" class="bottommenu">faq</a> | <a href="../developers.htm" class="bottommenu">developers</a> 
-        | <a href="../Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+<tr>
+<td height="1" width="160"><img src="../images/spacer.gif" width=
+"1" height="1"></td>
+<td height="1" width="342"><img src="../images/spacer.gif" width=
+"1" height="1"></td>
+<td height="1" width="501"><img src="../images/spacer.gif" width=
+"1" height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="../images/dscalerlogo.jpg" alt=
+"DScaler Logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->READ ME 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="../images/yellowspacer.gif" width=
+"100%" height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<h1>DScaler - version 2.3.0</h1>
+
+<p>What's new:<br>
+     Plug-in architecture<br>
+     Judder reduction<br>
+     New Greedy 2 Frame method (good for sports)<br>
+     Gamma filter<br>
+     Option to save settings per format/source<br>
+     <font size="2">WSS decoding for Pal and Secam sources<br>
+     Use of aspect ratio WSS data<br>
+     3 screens of Information using OSD (general screen,
+statistics screen</font> <font size="2">and WSS data decoding
+screen)<br>
+</font>     <font size="2">Autohide cursor feature<br>
+     Popup menu - right click in window<br>
+     New menu with direct access to all channels<br>
+     Command to go to the last viewed channel<br>
+     Single click replaced by double click to switch between
+window mode</font> <font size="2">and fullscreen mode<br>
+</font>     <font size="2">Option to save last used video format
+per video input<br>
+     Zoom feature - still experimental<br>
+     Adjustable window position<br>
+     Orbiting &amp; Bounce<br>
+     CC support - experimental - lots of known problems<br>
+     Teletext support - experimental - lots of known problems<br>
+</font></p>
+
+<h2>License:</h2>
+
+<p>This file is subject to the terms of the <a href=
+"http://www.gnu.org/copyleft/gpl.html">GNU General Public
+License</a> as published by the Free Software Foundation. A copy
+of this license is included with this software distribution in
+the file COPYING.html. If you do not have a copy, you may obtain
+a copy by writing to the Free Software Foundation, 675 Mass Ave,
+Cambridge, MA 02139, USA.</p>
+
+<p>This software is distributed in the hope that it will be
+useful, but WITHOUT ANY WARRANTY; without even the implied
+warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+See the GNU General Public License for more details</p>
+
+<h2>Requirements:</h2>
+
+<p>- I think it will run on Win 95/98 and NT. I have tested it on
+98, Windows 2000.<br>
+ - You will need a processor faster than about Pentium II 400MHz
+to use all the features<br>
+ - You will definitely need a PCI TV card with a BT848 BT849
+BT878 BT879 in it.<br>
+ - This software will not work with ATI All-in-Wonder or Matrox
+TV cards.</p>
+
+<h1><font color="#FF0000">Warning</font></h1>
+
+<p><font color="#FF0000">This program installs a temporary driver
+while it runs.  This means that some of the code runs inside
+Ring0 along with the kernel.  What this means is that if anything
+goes wrong this program can crash your whole system causing a
+BSOD in NT or a hanging 95/98.  If using a debugger then it it is
+very important that the program is allowed to shut down
+normally.  If you use Stop Debugging while running the program
+you system WILL crash.</font></p>
+
+<p><font color="#FF0000">As a precaution sync the disks before
+running this program.  Use the sync utility from <a href=
+"http://www.sysinternals.com/">http://www.sysinternals.com/</a>
+for whichever operating system you are running.</font></p>
+
+<p><a href="../Authors.htm">Authors</a></p>
+
+<p><a href="../Thanks.htm">Thanks</a></p>
+
+<p><a href="../user_support.htm">Support</a></p>
+
+<p><a href="../32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
+
+<p><a href="../IniFile.HTM">Ini File Settings</a></p>
+
+<p><a href="../keyboard.htm">Keyboard Shortcuts</a></p>
+
+<h2>Enjoy!</h2>
+
+<!-- #EndEditable --></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="../../images/yellowspacer.gif"
+width="100%" height="2"></div>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<div align="center"><a href="../index.php" class=
+"bottommenu">home</a> | <a href="../about.htm" class=
+"bottommenu">about</a> | <a href="../reviews/index.htm" class=
+"bottommenu">reviews</a> | <a href="../screenshots/index.htm"
+class="bottommenu">screenshots</a> | <a href="../downloads.htm"
+class="bottommenu">download</a> | <a href="../Authors.htm" class=
+"bottommenu">authors</a> | <a href="../Thanks.htm" class=
+"bottommenu">thanks</a><br>
+ <a href="../setup/index.htm" class="bottommenu">setup</a> | <a
+href="../keyboard.htm" class="bottommenu">keyboard shortcuts</a>
+| <a href="http://sourceforge.net/mail/?group_id=7420" class=
+"bottommenu">mailing list</a> | <a href="../FAQ.htm" class=
+"bottommenu">faq</a> | <a href="../developers.htm" class=
+"bottommenu">developers</a> | <a href="../Links.htm" class=
+"bottommenu">links</a></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
+
+<p><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" align="right">
+</a></p>
+
+<p> </p>
+
+<!-- #EndTemplate -->
 </body>
-<!-- #EndTemplate --></html>
+</html>
+
