--- a/htdocs/user_support.htm
+++ b/htdocs/user_support.htm
@@ -1,11 +1,12 @@
- 
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
-<!-- #BeginTemplate "/Templates/dtvnormal.dwt" --> 
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler - User Support</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -23,81 +24,144 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </head>
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->User 
-      Support &nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3">
-<!-- #BeginEditable "Text" --> 
-      <p>Currently, most for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
-        Home Theater PC Forum</a>, the largest such forum on the internet and 
-        a great place to pick up information and advice. Please feel free 
-        to stop by and say hello. You can post questions, bug reports, and suggestions 
-        there. We suggest that you do a <a href="http://www.avsforum.com/ubbcgi/search.cgi?action=intro">search</a> 
-        of the forum to ensure that your question has not already been answered.</p>
-      <p>Support is given by the helpful members of the community, whether they 
-        be involved in this project or not. However, some people that may appear 
-        often to answer user questions and who are affiliated with project include:</p>
-      <p>Bugs can also be posted <a href="http://sourceforge.net/bugs/?group_id=7420">here</a>,
-      this list should reflect the current known bugs.&nbsp; Please try to give
-      as much information as possible when describing youe problem.</p>
-      <p><u>User support<br>
-        </u>
-        Dan Schmelzer (dschmelzer), developer and user support;<br>
-        Yvon Quere (Yvonus), the FAQ maintainer;<br>
-        Jason Castle (jcastle), the todo and bugs pages maintainer; and<br>
-        (Slithy Tove), the .ini file page maintainer.</p>
-      <p><u>DScaler Developers</u><br>
-        John Adcock (JohnAd), the founder and administrator of the project;<br>
-        Mark Rejhon, developer;<br>
-        Steve Grimm (StevenGrimm), developer;<br>
-        Tom Barry (trbarry), developer;<br>
-        Mark Fiechtner, developer;<br>
-        Peter Gubanov (pgubanov), developer; and<br>
-        Michael Eskin (eskin), Conexant representative developer.</p>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->User Support   
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<p>Currently, most support DScaler is provided through the <a
+target="_blank" href=
+"http://www.avsforum.com/avs-vb/forumdisplay.php?s=&forumid=26">AVS
+Home Theater PC Forum</a>, the largest such forum on the internet
+and a great place to pick up information and advice.</p>
+
+<p>Because of the way DScaler is developed some parts of it are
+much more stable than others and indeed some parts of the code
+are considered experimental. The parts of the code currently
+considered experiemental are:</p>
+
+<ul>
+<li>Time-shifting</li>
+
+<li>Teletext</li>
+
+<li>Closed Capions</li>
+</ul>
+
+<p>Please do not report bugs in these areas to the forum.</p>
+
+<p>Additionally there is the ongoing problem of sound support,
+please read <a target="_blank" href=
+"http://www.dscaler.org/Help/index.php?helppage=SoundIssues.htm">this
+explaination of Sound Issues</a> before posting issues relating
+to sound in the <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&postid=654909&t=7777#post654909">
+Sound Issues Thread</a></p>
+
+<p>We also suggest that you do a <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/search.php?s=">search</a> of the
+"Home Theater Computer" forum to ensure that your question has
+not already been answered. Bugs can also be posted in the <a
+target="_blank" href=
+"http://sourceforge.net/bugs/?group_id=7420">DScaler bugs
+page</a> at <a target="_blank" href=
+"http://sourceforge.net/">SourceForge</a>, this list should
+reflect the current known bugs.  Please try to give as much
+information as possible when describing your problem.</p>
+
+<p>Support at <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/index.php?s=">AVS</a> is given by
+the helpful members of the community, whether they be involved in
+this project or not. However, some people that may appear often
+to answer user questions and who are affiliated with project
+include:</p>
+
+<p><u>User support<br>
+</u>Dan Schmelzer (dschmelzer)<br>
+ Yvon Quere (Yvonus)<br>
+ Jason Castle (jcastle)<br>
+ (Slithy Tove)</p>
+
+<p><u>DScaler Developers</u><br>
+ John Adcock (JohnAd)<br>
+ Mark Rejhon<br>
+ Steve Grimm (StevenGrimm)<br>
+ Tom Barry (trbarry)<br>
+ Peter Gubanov (pgubanov)<br>
+ Michael Eskin (eskin)</p>
+
 <!-- #EndEditable -->
-	</td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
-        | <a href="/reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
-        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
-        | <a href="Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<div align="center"><a class="bottommenu" href=
+"index.php">home</a> | <a href="about.htm" class=
+"bottommenu">about</a> | <a href="/reviews/index.htm" class=
+"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
+"bottommenu">screenshots</a> | <a href="downloads.htm" class=
+"bottommenu">download</a> | <a href="Authors.htm" class=
+"bottommenu">authors</a> | <a href="Thanks.htm" class=
+"bottommenu">thanks</a><br>
+ <a href="setup/index.htm" class="bottommenu">setup</a> | <a
+href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
+<a href="http://sourceforge.net/mail/?group_id=7420" class=
+"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
+"bottommenu">faq</a> | <a href="developers.htm" class=
+"bottommenu">developers</a> | <a href="Links.htm" class=
+"bottommenu">links</a></div>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" width="88" height="31" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
-</body>
+
+<p><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" align="right">
+</a></p>
+
+<p> </p>
+
 <!-- #EndTemplate -->
+</body>
 </html>
+
