Corrected AVS link

--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -61,7 +61,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         allows some people equipped with data capable projectors to feed them 
         with a progressive scan source that was interlaced right before. 
       <p>The main forum for user discussion is the Home Theater Computers Section 
-        on the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi?action=intro&showall=1">AV Science 
+        on the <a href="http://www.avsforum.com/avs-vb/">AV Science 
         Forum</a>.</p>
       <p>Please see the <a href="downloads.htm">downloads page</a> to download 
         the latest version.</p>
