--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -56,13 +56,15 @@ height="2"></td>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 
-<p>I would like to express my gratitude to:</p>
+<p>The DScaler team would like to express their gratitude to:</p>
 <ul>
 <li>All the <a href="Authors.htm">authors</a> who have contributed 
 code to the project.</li>
 
 <li>Expresso for creating multidec the foundation of DScaler. 
 <a href="Thanks_MultiDec.txt">MultiDec's thanks.</a></li>
+
+<li>Mathias Ellinger for the driver from FreeTV on which DScaler's driver is based.</li>
 
 <li>Daniel Schmelzer for his hard work creating and
 updating the website. </li>
