Added 3.1.0 release thread

--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -74,6 +74,10 @@ VirtualDub Plug-ins</a><br>
 
 <blockquote>
 <p><a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=89606">
+DScaler 3.1.0 Release Thread</a> (AVS Forum)<br>
+
+<p><a href=
 "http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=32723">
 DScaler 2.3.0 Release Thread</a> (AVS Forum)<br>
  
