Added an "s" to CellarCinemas

--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -170,7 +170,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           using Zoltrix cards</li>
         <li><a href="http://www.digitalconnection.com">DigitalConnection</a></li>
         <li><a href="http://www.spatz-tech.de">Spatz Tech</a>, from Germany</li>
-        <li><a href="http://www.cellarcinema.com">Cellar Cinema</a> are using 
+        <li><a href="http://www.cellarcinemas.com">Cellar Cinemas</a> are using 
           Osprey cards</li>
       </ul>
       <H2>&nbsp;</H2>
