Adding the link to Hauppauge site regarding the Directshow filter

--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -162,7 +162,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Megenity, (c) Primedia Group Inc.</p>
       <H2><img src="SGTHcover.jpg" width="92" height="117"></H2>
       <H2>&nbsp;</H2>
-      <h1>Home theater computers makers</h1>
+      <h1>Manufacturers</h1>
       <p>They're building home theater computers, and some of them have chosen 
         to bundle Dscaler in their configuration.</p>
       <ul>
@@ -173,7 +173,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li><a href="http://www.cellarcinemas.com">Cellar Cinemas</a> are using 
           Osprey cards</li>
       </ul>
-      <H2>&nbsp;</H2>
+      <p><a href="http://www.hauppauge.com/html/sw_wcst.htm#3rd">Hauppauge</a> 
+        is using a Directshow deinterlacing filter coming from the DScaler team.</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
